--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ into.app.version=1.0.0
 # Define my crazy properties
 coach.name= Mickey Mouse
 team.name= The Mouse Club
+
+# Set the context path of the application
+# All requests should ve prefixed with /mycoolapp
+server.servlet..context-path=/mycoolapp
+
+
+
+# '[NEW] Spring Boot 3, Spring 6 & Hibernate for Beginners - Chad Darby' Udemy Course final project
