--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,5 @@
 spring.application.name=myCoolApp
-
-#Use wildcard "*" to expose all endpoints
-#Can also expose individual endpoints with a comma-delimited list
-management.endpoints.web.exposure.include=*
-management.info.env.enabled=true
-
-# Exclude individual endpoints with a comma-delimited list
-management.endpoints.web.exposure.exclude=health,info
-
-info.app.name=My Super Cool App
-info.app.description=A crazy fun app, yoohoo!
-into.app.version=1.0.0
-
-# Define my crazy properties
-coach.name= Mickey Mouse
-team.name= The Mouse Club
-
-# Set the context path of the application
-# All requests should ve prefixed with /mycoolapp
-server.servlet..context-path=/mycoolapp
-
-
+spring.main.lazy-initialization=true
+# All beans is lazy
 
 # '[NEW] Spring Boot 3, Spring 6 & Hibernate for Beginners - Chad Darby' Udemy Course final project
