--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,26 @@
 spring.application.name=myCoolApp
 
+# Turn off the Spring Boot banner
+spring.main.banner-mode=off
+
+# Reduce logging level. Set logging level to warn
+logging.level.root=warn
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/student
+spring.datasource.username= environmen veriables
+spring.datasource.password= environmen veriables 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+
+
+
+
+
+
+
+
+
+
+
 # '[NEW] Spring Boot 3, Spring 6 & Hibernate for Beginners - Chad Darby' Udemy Course final project
