--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=myCoolApp
 
 # Turn off the Spring Boot banner
-spring.main.banner-mode=off
+#spring.main.banner-mode=on
 
 # Reduce logging level. Set logging level to warn
-logging.level.root=warn
+logging.level.root=info
 
+# Add logging configs to display SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# the "update" config will keep existing data in the table
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/student
-spring.datasource.username= environmen veriables
-spring.datasource.password= environmen veriables 
+spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
