--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,11 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
-
+#
+# Spring Data Rest properties
+#
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
 
 
 
