--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,13 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # the "update" config will keep existing data in the table
-spring.jpa.hibernate.ddl-auto=update
+# tables have been created in the database
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql= true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql= true
 
 
 # Spring Data Rest properties
