--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,17 +19,13 @@ spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql= true
 
-
 # Spring Data Rest properties
 # spring.data.rest.base-path=/magic-api
 # spring.data.rest.default-page-size=20
 
-
 spring.security.user.name=
 spring.security.user.password=
-
-
-
+logging.level.org.springframework.security=DEBUG
 
 
 
