--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.password=
 
 spring.security.user.name=
 spring.security.user.password=
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 
 
 
