--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-spring.application.name=myCoolApp
+#spring.application.name=myCoolApp
 
 # Turn off the Spring Boot banner
 #spring.main.banner-mode=on
 
 # Reduce logging level. Set logging level to warn
-logging.level.root=info
+#logging.level.root=info
 
 # Add logging configs to display SQL statements
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.orm.jdbc.bind=trace
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # the "update" config will keep existing data in the table
 # tables have been created in the database
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
+#spring.datasource.username=
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql= true
 
@@ -23,9 +23,15 @@ spring.datasource.password=
 # spring.data.rest.base-path=/magic-api
 # spring.data.rest.default-page-size=20
 
-spring.security.user.name=
-spring.security.user.password=
+#spring.security.user.name=
+#spring.security.user.password=
 #logging.level.org.springframework.security=DEBUG
+
+countries=Brazil,France,Germany,India,Mexico,Spain,United States,Turkey
+languages=Java,Kotlin,Python,C#
+systems=Linux,macOS,Microsoft Windows
+
+
 
 
 
