Spring MVC Validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,11 +27,9 @@
 #spring.security.user.password=
 #logging.level.org.springframework.security=DEBUG
 
-countries=Brazil,France,Germany,India,Mexico,Spain,United States,Turkey
-languages=Java,Kotlin,Python,C#
-systems=Linux,macOS,Microsoft Windows
-
-
+#countries=Brazil,France,Germany,India,Mexico,Spain,United States,Turkey
+#languages=Java,Kotlin,Python,C#
+#systems=Linux,macOS,Microsoft Windows
 
 
 
