mvc crud using thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@
 # the "update" config will keep existing data in the table
 # tables have been created in the database
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
+spring.datasource.username=
+spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql= true
 
