spring mvc security - custom tables with jpa/hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ spring.datasource.password=
 #languages=Java,Kotlin,Python,C#
 #systems=Linux,macOS,Microsoft Windows
 
-
+#logging.level.org.springframework.jdbc.core=TRACE
 
 # '[NEW] Spring Boot 3, Spring 6 & Hibernate for Beginners - Chad Darby' Udemy Course final project
