--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 #spring.application.name=myCoolApp
 
 # Turn off the Spring Boot banner
-#spring.main.banner-mode=on
+spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level to warn
 #logging.level.root=info
 
-# Add logging configs to display SQL statements
+#JPA/Hibernate logging message
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # the "update" config will keep existing data in the table
 # tables have been created in the database
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mycoolapp
 spring.datasource.username=
 spring.datasource.password=
@@ -30,6 +30,7 @@ spring.datasource.password=
 #countries=Brazil,France,Germany,India,Mexico,Spain,United States,Turkey
 #languages=Java,Kotlin,Python,C#
 #systems=Linux,macOS,Microsoft Windows
+
 
 #logging.level.org.springframework.jdbc.core=TRACE
 
