--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level to warn
-#logging.level.root=info
+#logging.level.root=warn
 
 #JPA/Hibernate logging message
 #logging.level.org.hibernate.SQL=debug
